High-perf JVM flags